# Havtorn

./: .gitignore  .gitmodules  havtorn_project_setup.drawio
Havtorn/Source/: AddFileToCMakeList.py  AddLicenseToFile.py  CMakeLists.txt  CreateFile.bat  CreateFileInProject.py  CreateFiles.bat  CreateNewTemplate.bat  FileCreationUtil.py  FileCreatorUtil.py  FileTemplates.json  GenerateCMakeList.py  Havtorn.sln  HavtornMainFoldersUtility.py  ParseJson.py  TemplateCreatorUtil.py  TestFile.cpp  TestJson.json  ValidationUtils.py
Havtorn/Source/Core/: BitSet.h  Color.h  CommandLine.cpp  Core.h  CoreTypes.h  Delegate.cpp  Delegate.h  EngineTypes.h  FileSystem.cpp  FileSystem.h  GeneralUtilities.h  HavtornDelegate.h  HavtornString.cpp  HavtornString.h  Log.cpp  Log.h  Serializable.cpp  Serializable.h  hvpch.cpp  hvpch.h  magic_enum.h
Havtorn/Source/Core/MathTypes/: AABB3D.h  Curve.cpp  Curve.h  EngineMath.cpp  EngineMath.h  EngineMathSSE.h  Frustum.h  Line.h  LineVolume.h  MathUtilities.h  Matrix.cpp  Matrix.h  Matrix3x3.h  PlaneVolume.h  Quaternion.cpp  Quaternion.h  Rotator.h  Sphere.h  Transform.h  Vector.cpp  Vector.h
Havtorn/Source/Editor/: EditorManager.cpp  EditorManager.h  EditorProcess.cpp  EditorProcess.h  EditorResourceManager.cpp  EditorResourceManager.h  EditorToggleable.cpp  EditorToggleable.h  EditorToggleables.h  EditorWindow.cpp  EditorWindow.h  EditorWindows.h
Havtorn/Source/Editor/AuthoringTools/: MaterialTool.cpp  MaterialTool.h  ScriptTool.cpp  ScriptTool.h
Havtorn/Source/Editor/Systems/: EditorRenderSystem.cpp  EditorRenderSystem.h  PickingSystem.cpp  PickingSystem.h
Havtorn/Source/Editor/Toggleables/: EditMenu.cpp  EditMenu.h  FileMenu.cpp  FileMenu.h  HelpMenu.cpp  HelpMenu.h  ViewMenu.cpp  ViewMenu.h  WindowMenu.cpp  WindowMenu.h
Havtorn/Source/Editor/Utils/: ImGuiUtils.h
Havtorn/Source/Editor/Windows/: AssetBrowserWindow.cpp  AssetBrowserWindow.h  DockSpaceWindow.cpp  DockSpaceWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  OutputLogWindow.cpp  OutputLogWindow.h  SequencerWindow.cpp  SequencerWindow.h  SpriteAnimatorGraphNodeWindow.cpp  SpriteAnimatorGraphNodeWindow.h  ViewportWindow.cpp  ViewportWindow.h
Havtorn/Source/Engine/: ECS.cpp  Engine.cpp  Engine.h  Havtorn.h  Log.cpp  Log.h  ModelImporter.cpp  ModelImporter.h  Timer.cpp  Timer.h  cpp.hint  hvpch.h
Havtorn/Source/Engine/Application/: EngineProcess.cpp  EngineProcess.h  ImGuiCrossProjectSetup.h  ImGuiDLLSetup.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiProcess.cpp  ImGuiProcess.h  WindowHandler.cpp  WindowHandler.h
Havtorn/Source/Engine/Assets/: Asset.h  AssetRegistry.cpp  AssetRegistry.h  FileHeaderDeclarations.h  RuntimeAssetDeclarations.h  SequencerAsset.cpp  SequencerAsset.h
Havtorn/Source/Engine/Core/: BitSet.h  Color.cpp  Color.h  ColorList.cpp  ColorList.h  Core.h  CoreTypes.h  Delegate.cpp  Delegate.h  EngineException.h  EngineTypes.h  GeneralUtilities.h  HavtornHashmap.h  HavtornString.cpp  HavtornString.h  HavtornVector.h  ImGuiTypeUtil.cpp  ImGuiTypeUtil.h  RuntimeAssetDeclarations.h  Serializable.cpp  Serializable.h  Utilities.cpp  Utilities.h
Havtorn/Source/Engine/Debug/: DebugDrawer.cpp  DebugDrawer.h  DebugShape.cpp  DebugShape.h  DebugUtilityShape.cpp  DebugUtilityShape.h
Havtorn/Source/Engine/ECS/: Component.cpp  Component.h  ComponentAlgo.h  ComponentEditorContext.h  ComponentView.h  ECS.h  ECSInclude.h  Entity.cpp  Entity.h  GUIDManager.cpp  GUIDManager.h  System.h
Havtorn/Source/Engine/Editor/: EditorManager.cpp  EditorManager.h  EditorToggleable.h  EditorWindow.h
Havtorn/Source/Engine/FileSystem/: FileHeaderDeclarations.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h
Havtorn/Source/Engine/Graphics/: FullscreenTexture.cpp  FullscreenTexture.h  FullscreenTextureFactory.cpp  FullscreenTextureFactory.h  GBuffer.cpp  GBuffer.h  GeometryPrimitives.h  GeometryPrimitivesUtility.cpp  GeometryPrimitivesUtility.h  GraphicsEnums.h  GraphicsFramework.cpp  GraphicsFramework.h  GraphicsMaterial.cpp  GraphicsMaterial.h  GraphicsStructs.h  GraphicsUtilities.cpp  GraphicsUtilities.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  RenderStateManager.cpp  RenderStateManager.h  RenderTextureFactory.cpp  RenderTextureFactory.h  TextureBank.cpp  TextureBank.h  VertexBufferPrimitivesUtility.h
Havtorn/Source/Engine/HexPhys/: HexPhys.cpp  HexPhys.h
Havtorn/Source/Engine/HexRune/: HexRune.cpp  HexRune.h  NodeEditorContext.h  Pin.cpp  Pin.h
Havtorn/Source/Engine/Input/: Input.cpp  Input.h  InputMapper.cpp  InputMapper.h  InputTypes.h
Havtorn/Source/Engine/Scene/: AssetRegistry.cpp  AssetRegistry.h  Scene.cpp  Scene.h  World.cpp  World.h
Havtorn/Source/Engine/SequencerKeyframes/: SequencerKeyframe.cpp  SequencerKeyframe.h  SequencerSpriteKeyframe.cpp  SequencerSpriteKeyframe.h  SequencerTransformKeyframe.cpp  SequencerTransformKeyframe.h
Havtorn/Source/Engine/Threading/: ThreadManager.cpp  ThreadManager.h
Havtorn/Source/GUI/: FuzzySearch.cpp  FuzzySearch.h  GUI.cpp  GUI.h  GUIProcess.cpp  GUIProcess.h
Havtorn/Source/GUI/EditorIMGUI/: GUIProcess.cpp  GUIProcess.h
Havtorn/Source/Game/: GameManager.cpp  GameManager.h  GameProcess.cpp  GameProcess.h  GameScene.cpp  GameScene.h  GameScript.cpp  GameScript.h  GhostyNode.cpp  GhostyNode.h  NodeInclude.h  TemplateTest.cpp  TemplateTest.h  hvpch.cpp  hvpch.h
Havtorn/Source/Game/Ghosty/: GhostyComponent.h  GhostyComponentEditorContext.cpp  GhostyComponentView.cpp  GhostyComponentView.h  GhostySystem.cpp  GhostySystem.h  SGhostyNodeEditorContext.cpp  SGhostyNodeEditorContext.h
Havtorn/Source/Game/HexRune/: InterpolatePosition.cpp  InterpolatePosition.h  TimerNode.cpp  TimerNode.h
Havtorn/Source/ImGui/Havtorn/: Utilities.cpp  Utilities.h
Havtorn/Source/Launcher/: LauncherApplication.cpp  Main.cpp
Havtorn/Source/Launcher/Application/: Application.cpp  Application.h  Process.h
Havtorn/Source/Platform/: PlatformManager.cpp  PlatformManager.h  PlatformProcess.cpp  PlatformProcess.h  PlatformUtilities.cpp  PlatformUtilities.h  WindowsInclude.h
(+325 files in other folders)
